target/classes/META-INF/jkube/openshift/poc-deployment-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: poc-deployment
    provider: jkube
    version: 1.0.0-SNAPSHOT
    group: com.technoverse
  name: poc-deployment
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: poc-deployment
